# game-of-life

./: LICENSE  README.md  pyproject.toml
src/: __init__.py  __main__.py  app.py  cli.py  grid.py  keyboard.py  mouse.py
src/components/: base.py  console.py  input_text.py
src/core/: keyboard.py  mouse.py
